[package]
name = "natsio"
version = "0.4.0"
description = "Deprecated in favor of the nats crate"
authors = ["Derek Collison <derek@nats.io>", "Tyler Neely <tyler@nats.io>", "Stjepan Glavina <stjepan@nats.io>"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/nats"
homepage = "https://github.com/nats-io/nats.rs"
repository = "https://github.com/nats-io/nats.rs"
readme = "CRATE.md"
keywords = ["nats", "client", "messaging", "api"]
categories = ["network-programming", "api-bindings"]

[badges]
travis-ci = { repository = "nats-io/nats.rs", branch = "master" }
maintenance = { status = "deprecated" }

[dependencies]
